--- a/source/gradle/libs.versions.toml
+++ b/source/gradle/libs.versions.toml
@@ -4,9 +4,9 @@ compileSdk = "35"
 minSdk = "24"
 targetSdk = "35"
 # __(API)____(version)_(abi)
-versionCode = "3501190"
+versionCode = "3501200"
 versionCodeAlpha = "23"
-versionName = "2.0.12"
+versionName = "2.0.13-S3"
 
 # libraries
 accompanist = "0.30.1"
