refactor: 重命名应用名为 DataBackup Revived
## 核心变更

### 应用标识修改
- 将 applicationId 从 `com.xayah.databackup` 改为 `com.xayah.databackup.revived`
- 保持 namespace 为 `com.xayah.databackup` 以兼容现有代码结构
- 更新应用名称为 "DataBackup Revived"
- 版本号从 3.0.0 开始,使用 gradle/libs.versions.toml 管理

### ContentProvider 冲突修复
- 修改所有 flavor 模块的 AndroidManifest.xml,将 ContentProvider authority 从硬编码改为 `${applicationId}` 占位符
- 更新 CrashProvider 和 FileSharingProvider 的 authority 配置
- 修改 LogUtil.kt 中的 FileSharingProvider authority 引用,使用 `context.packageName` 动态获取

### AndroidManifest 类名修复
- 将相对类名(如 `.DataBackupApplication`)改为完整类名(`com.xayah.databackup.DataBackupApplication`)
- 修复因 namespace 与代码包名不一致导致的 ClassNotFoundException

### Firebase 配置更新
- 替换为新的 Firebase 项目配置(android-databackup-s3-9d3ea)
- 为所有 flavor 变体(alpha, foss, premium)添加新包名配置
- 移除 feature module 的 Google Services 插件依赖

### 更新检查功能调整
- 更新 GitHub 仓库链接指向新的 fork 仓库
- 修改 APK 下载链接以匹配新的包名格式

### 向后兼容性
- 新旧版本可在同一设备上共存(不同的 applicationId)
- ContentProvider authority 使用动态包名,避免冲突

Breaking Changes: 由于 applicationId 变更,这是一个全新的应用,用户无法从旧版本直接升级,需要安装新版本。

---

refactor: Rename application package to DataBackup Revived

## Core Changes

### Application Identity Modifications
- Changed applicationId from `com.xayah.databackup` to `com.xayah.databackup.revived`
- Kept namespace as `com.xayah.databackup` to maintain compatibility with existing code structure
- Updated application display name to "DataBackup Revived"
- Reset version to 3.0.0, managed via gradle/libs.versions.toml

### ContentProvider Authority Conflict Resolution
- Modified AndroidManifest.xml in all flavor modules to use `${applicationId}` placeholder instead of hardcoded authorities
- Updated CrashProvider and FileSharingProvider authorities configuration
- Modified FileSharingProvider authority reference in LogUtil.kt to use `context.packageName` for dynamic retrieval

### AndroidManifest Class Path Fixes
- Changed relative class names (e.g., `.DataBackupApplication`) to fully qualified names (`com.xaya

--- a/source/feature/flavor/alpha/src/main/AndroidManifest.xml
+++ b/source/feature/flavor/alpha/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         <!-- Workaround for CrashHandler -->
         <provider
             android:name="com.xayah.core.provider.CrashProvider"
-            android:authorities="com.xayah.core.provider.CrashProvider.alpha"
+            android:authorities="${applicationId}.crashprovider"
             android:exported="false"
             android:initOrder="101"
             tools:replace="android:authorities" />
@@ -16,7 +16,7 @@
 
         <provider
             android:name="com.xayah.core.provider.FileSharingProvider"
-            android:authorities="com.xayah.core.provider.FileSharingProvider.alpha"
+            android:authorities="${applicationId}.filesharingprovider"
             android:exported="false"
             android:grantUriPermissions="true"
             tools:replace="android:authorities">
