--- a/source/app/src/main/AndroidManifest.xml
+++ b/source/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:name=".DataBackupApplication"
+        android:name="com.xayah.databackup.DataBackupApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -17,7 +17,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".SplashActivity"
+            android:name="com.xayah.databackup.SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.DataBackup.SplashScreen">
             <intent-filter>
@@ -27,7 +27,7 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.xayah.databackup.MainActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
 
