--- a/source/core/provider/src/main/AndroidManifest.xml
+++ b/source/core/provider/src/main/AndroidManifest.xml
@@ -1,2 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <application>
+        <provider
+            android:name="com.xayah.core.provider.CrashProvider"
+            android:authorities="${applicationId}.crashprovider"
+            android:exported="false"
+            android:enabled="true" />
+    </application>
+</manifest>
