--- a/source/feature/flavor/foss/src/main/AndroidManifest.xml
+++ b/source/feature/flavor/foss/src/main/AndroidManifest.xml
@@ -2,17 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application android:label="@string/app_name">
-        <!-- Workaround for CrashHandler -->
-        <provider
-            android:name="com.xayah.core.provider.CrashProvider"
-            android:authorities="com.xayah.core.provider.CrashProvider.foss"
-            android:exported="false"
-            android:initOrder="101" />
-        <!-- End -->
-
         <provider
             android:name="com.xayah.core.provider.FileSharingProvider"
-            android:authorities="com.xayah.core.provider.FileSharingProvider.foss"
+            android:authorities="${applicationId}.filesharingprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
