--- a/source/feature/flavor/premium/src/main/AndroidManifest.xml
+++ b/source/feature/flavor/premium/src/main/AndroidManifest.xml
@@ -5,14 +5,14 @@
         <!-- Workaround for CrashHandler -->
         <provider
             android:name="com.xayah.core.provider.CrashProvider"
-            android:authorities="com.xayah.core.provider.CrashProvider.premium"
+            android:authorities="${applicationId}.crashprovider"
             android:exported="false"
             android:initOrder="101" />
         <!-- End -->
 
         <provider
             android:name="com.xayah.core.provider.FileSharingProvider"
-            android:authorities="com.xayah.core.provider.FileSharingProvider.premium"
+            android:authorities="${applicationId}.filesharingprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
