--- a/source/gradle/libs.versions.toml
+++ b/source/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ targetSdk = "35"
 versionCode = "30000"
 versionCodeAlpha = "30000"
 versionName = "3.0.0-S3-revived"
+kotlinx-serialization = "1.6.0"
 
 # libraries
 accompanist = "0.30.1"
@@ -59,6 +60,7 @@ ksp-kotlin = "2.0.21-1.0.28"
 refine = "4.4.0"
 
 [libraries]
+kotlinx-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
 accompanist-drawablepainter = { module = "com.google.accompanist:accompanist-drawablepainter", version.ref = "accompanist" }
 accompanist-placeholder = { module = "com.google.accompanist:accompanist-placeholder", version.ref = "accompanist" }
